few media query alignment corrections

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -63,7 +63,6 @@ header {
     url(../images/headshot.jpeg);
   background-size: cover;
   background-position: top;
-  background-attachment: fixed;
   background-repeat: no-repeat;
   min-height: 90vh;
   display: flex;
